--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
-  "name": "frc-ui-pro",
+  "name": "frc-ui-pro-dev",
   "version": "0.1.0",
-  "private": true,
+  "author": "chenhui996",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "license": "MIT",
+  "keywords": [
+    "Component",
+    "UI",
+    "React"
+  ],
+  "homepage": "https://github.com/chenhui996/frc-ui-pro",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chenhui996/frc-ui-pro"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@storybook/addons": "^6.4.13",
@@ -10,7 +28,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.0",
@@ -25,11 +42,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && npm run build-ts && npm run build-css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -70,7 +91,9 @@
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.13",
+    "@types/node": "^17.0.9",
     "css-loader": "^6.5.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.48.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
