--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "outDir": "dist",
+      "outDir": "dist/src",
       "module": "esnext",
       "target": "es5",
       "declaration": true,
