--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frc-ui-pro-dev",
-  "version": "0.1.10",
-  "author": "chenhui996",
+  "name": "frc-ui-pro",
+  "version": "1.1.0",
+  "author": "sumscope",
   "private": false,
   "main": "dist/src/index.js",
   "module": "dist/src/index.js",
@@ -12,11 +12,6 @@
     "UI",
     "React"
   ],
-  "homepage": "https://github.com/chenhui996/frc-ui-pro",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/chenhui996/frc-ui-pro"
-  },
   "files": [
     "dist"
   ],
@@ -31,11 +26,14 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.0",
+    "fetch-jsonp": "^1.2.1",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
