--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "frc-ui-pro",
-  "version": "1.1.0",
-  "author": "sumscope",
+  "name": "frc-ui-pro-dev",
+  "version": "1.2.1",
+  "author": "chenhui996",
   "private": false,
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "keywords": [
     "Component",
     "UI",
     "React"
   ],
+  "homepage": "https://github.com/chenhui996/frc-ui-pro",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chenhui996/frc-ui-pro"
+  },
   "files": [
     "dist"
   ],
